thêm entity và crud món ăn

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,10 @@
 spring.application.name=RestaurantBE
-spring.datasource.url=jdbc:mysql://localhost:3307/restaurant
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# HikariCP Settings
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.pool-name=SpringBootHikariCP
-spring.datasource.hikari.max-lifetime=2000000
-spring.datasource.hikari.connection-timeout=20000
-logging.level.org.hibernate=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
