--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 
-app.jwt.secret=
-app.jwt.expiration=
+app.jwt.secret=avsdhasdcbasdadawgacasvashasczxbasdcacxzgqwasc
+app.jwt.expiration=3600
+
+logging.level.org.springframework.security=DEBUG
