--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ paypal.client-secret=EHc4CQYhtBk3Ej6YG6onmtUnboU0cA5UuIM0FGaxRKUDRuNIKxPUwnSxqgw
 paypal.mode=sandbox
 paypal.return-url=http://localhost:8080/api/paypal/success
 paypal.cancel-url=http://localhost:8080/api/paypal/cancel
+
+vnpay.tmn-code=PHCKMLTO
+vnpay.hash-secret=WKBFORFGBUGKCVZOT1SK3BNGZOBELGFK
+vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.return-url=http://localhost:8080/api/vnpay/vnpay-return
